fix mobile view(not responsive in some res)

--- a/assets/styles/_works.scss
+++ b/assets/styles/_works.scss
@@ -7,7 +7,6 @@
   // gap: 1rem;
 
   .works-content {
-    flex: 1;
     color: white;
     display: flex;
     justify-content: center;
@@ -31,12 +30,12 @@
     }
   }
   .works-image {
-    flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-left: 1rem;
     img {
+      flex-shrink: 0;
       height: 100%;
       width: 100%;
       object-fit: scale-down;
