--- a/assets/styles/mobile/_skills.scss
+++ b/assets/styles/mobile/_skills.scss
@@ -7,17 +7,18 @@
   .card-container {
     height: 100%;
     width: 100%;
-    // position: absolute;
+    position: static;
     // left: 50%;
-    bottom: 0;
+    // bottom: 0;
     display: flex;
     flex-direction: column;
     gap: 0;
     padding: 1rem;
-    // transform: translateX(-50%);
+    transform: translateX(0);
     .card {
-      height: 100%;
-      width: 100%;
+      flex: 1;
+      max-height: 100%;
+      max-width: 100%;
       background-color: white;
       border-radius: 20px;
       display: flex;
@@ -26,6 +27,7 @@
       flex-direction: column;
       margin: 0.5rem 0;
       gap: 0;
+      padding: 1rem;
       img {
         height: 30%;
         width: 30%;
