--- a/assets/styles/mobile/_works.scss
+++ b/assets/styles/mobile/_works.scss
@@ -3,7 +3,6 @@
   width: 100vw;
   background-color: black;
   display: flex;
-  flex-direction: column-reverse;
   padding: 4rem 5%;
   // gap: 1rem;
 
@@ -13,7 +12,6 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    text-align: center;
     h4,
     h2 {
       font-weight: 600;
@@ -26,7 +24,7 @@
       font-size: 2em;
     }
     p {
-      text-align: center;
+      text-align: justify;
     }
     a {
       color: white;
@@ -37,12 +35,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 0;
-    margin-bottom: 1rem;
+    margin-left: 1rem;
     img {
       height: 100%;
       width: 100%;
-      object-fit: cover;
+      object-fit: scale-down;
     }
   }
 }
